--- a/rr_lib/src/main/res/values/strings.xml
+++ b/rr_lib/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">rr_lib</string>
+    <string name="title_activity_base">BaseActivity</string>
 </resources>
